--- a/code/keyboard_code.ioc
+++ b/code/keyboard_code.ioc
@@ -20,8 +20,9 @@ Mcu.Pin3=PB0
 Mcu.Pin4=PC9
 Mcu.Pin5=PA13
 Mcu.Pin6=PA14
-Mcu.Pin7=VP_SYS_VS_Systick
-Mcu.PinsNb=8
+Mcu.Pin7=PB3
+Mcu.Pin8=VP_SYS_VS_Systick
+Mcu.PinsNb=9
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103RBTx
@@ -43,9 +44,9 @@ PA0-WKUP.GPIO_Label=COLUMN10
 PA0-WKUP.GPIO_PuPd=GPIO_PULLDOWN
 PA0-WKUP.Locked=true
 PA0-WKUP.Signal=GPIO_Input
-PA13.Mode=Serial_Wire
+PA13.Mode=Trace_Asynchronous_SW
 PA13.Signal=SYS_JTMS-SWDIO
-PA14.Mode=Serial_Wire
+PA14.Mode=Trace_Asynchronous_SW
 PA14.Signal=SYS_JTCK-SWCLK
 PA6.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_Label
 PA6.GPIO_Label=ROW7
@@ -62,6 +63,8 @@ PB0.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PB0.Locked=true
 PB0.PinState=GPIO_PIN_SET
 PB0.Signal=GPIO_Output
+PB3.Mode=Trace_Asynchronous_SW
+PB3.Signal=SYS_JTDO-TRACESWO
 PC5.GPIOParameters=GPIO_PuPd,GPIO_Label
 PC5.GPIO_Label=COLUMN9
 PC5.GPIO_PuPd=GPIO_PULLDOWN
@@ -104,13 +107,23 @@ ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
 ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true
+RCC.ADCFreqValue=4000000
+RCC.AHBFreq_Value=8000000
 RCC.APB1Freq_Value=8000000
+RCC.APB1TimFreq_Value=8000000
 RCC.APB2Freq_Value=8000000
+RCC.APB2TimFreq_Value=8000000
+RCC.FCLKCortexFreq_Value=8000000
 RCC.FamilyName=M
-RCC.IPParameters=APB1Freq_Value,APB2Freq_Value,FamilyName,PLLCLKFreq_Value,PLLMCOFreq_Value,TimSysFreq_Value
+RCC.HCLKFreq_Value=8000000
+RCC.IPParameters=ADCFreqValue,AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,MCOFreq_Value,PLLCLKFreq_Value,PLLMCOFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,TimSysFreq_Value,USBFreq_Value
+RCC.MCOFreq_Value=8000000
 RCC.PLLCLKFreq_Value=8000000
 RCC.PLLMCOFreq_Value=4000000
+RCC.SYSCLKFreq_VALUE=8000000
+RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
 RCC.TimSysFreq_Value=8000000
+RCC.USBFreq_Value=8000000
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 board=custom
